--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
     <div>
       <h2>Buttons</h2>
       <div>
-        <button>Primary</button>
-        <button>Secondary</button>
-        <button>Error</button>
+        <button class="buttons">Primary</button>
+        <button class="buttons">Secondary</button>
+        <button class="buttons">Error</button>
       </div>
     </div>
     <div>
       <h2>Links</h2>
       <div>
-        <a href="#">Primary link</a>
-        <a href="#">Secondary link</a>
+        <a href="#" class="links">Primary link</a>
+        <a href="#" class="links">Secondary link</a>
       </div>
     </div>
     <div>
       <h2>Form elements</h2>
       <form action="#">
         <label for="name">Full Name:</label>
-        <input type="text" id="name" name="name" />
+        <input type="text" id="name" name="name" class="boxes"/>
         <label for="comments">Comments:</label>
-        <textarea id="comments" name="comments"></textarea>
+        <textarea id="comments" name="comments" class="boxes"></textarea>
 
         <button>Save</button>
       </form>
